--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,24 @@
 {
   "name": "backend-challenge",
   "version": "1.0.0",
-  "description": "Welcome to the **Cybee.ai Backend Challenge**!",
-  "main": "index.js",
+  "description": "Google Workspace Log Collection Service",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@elastic/elasticsearch": "^8.17.1",
+    "@elastic/elasticsearch": "^8.12.0",
+    "axios": "^1.6.7",
     "backend-challenge": "file:",
-    "bullmq": "^5.41.8",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.2.1",
-    "googleapis": "^146.0.0",
-    "ioredis": "^5.6.0",
-    "mongoose": "^8.12.1"
+    "bullmq": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "fastify": "^4.26.1",
+    "ioredis": "^5.3.2",
+    "log-fetcher": "file:",
+    "mongoose": "^8.1.3"
   }
 }
